--- a/src/scss/main-content.scss
+++ b/src/scss/main-content.scss
@@ -1,5 +1,5 @@
 .main-content {
   display: grid;
-  grid-template-rows: 300px 1fr 300px;
+  grid-template-rows: 300px min-content 300px;
   grid-gap: 20px;
 }
